<resources>
    <string name="app_name">PracticalTest01Var05</string>
    <string name="navigate_to_secondary_activity">Navigate to secondary activity</string>
    <string name="top_left_button">Top Left</string>
    <string name="top_right_button">Top Right</string>
    <string name="center_button">Center</string>
    <string name="bottom_left_button">BOTTOM LEFT</string>
    <string name="bottom_right_button">BOTTOM RIGHT</string>
    <string name="all_terms">All buttons</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="verify_button">Verify</string>
</resources>